--- a/projects/auto-requests/src/styles.less
+++ b/projects/auto-requests/src/styles.less
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import '~bootstrap/dist/css/bootstrap.css';
+@import './app/styles/application';
+@import './app/styles/fonts';
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
