--- a/projects/auto-requests/src/app/features/requests/components/requests-list/requests-list.component.html
+++ b/projects/auto-requests/src/app/features/requests/components/requests-list/requests-list.component.html
@@ -1,5 +1,6 @@
 <div class="tabs"></div>
 <div class="content">
-  <app-tabs></app-tabs>
-  <app-requests-grid style="margin-top: 25px"></app-requests-grid>
+  <app-tabs>
+    <app-requests-grid style="margin-top: 25px"></app-requests-grid>
+  </app-tabs>
 </div>
