--- a/projects/auto-requests/src/app/features/requests/components/tabs/tabs.component.html
+++ b/projects/auto-requests/src/app/features/requests/components/tabs/tabs.component.html
@@ -1,13 +1,18 @@
-<div class="tabs">
-  <div class="tab selected">
-    <div class="title">Все заявки</div>
+<div class="tabs pl-5 pr-5">
+  <div class="tabs-container">
+    <div class="tab selected">
+      <div class="title">Все заявки</div>
+    </div>
+    <div class="tab">
+      <div class="title">Мои заявки</div>
+      <div class="indicator">12</div>
+    </div>
+    <div class="tab">
+      <div class="title">Найденные</div>
+      <div class="indicator">9</div>
+    </div>
   </div>
-  <div class="tab">
-    <div class="title">Мои заявки</div>
-    <div class="indicator">12</div>
-  </div>
-  <div class="tab">
-    <div class="title">Найденные</div>
-    <div class="indicator">9</div>
-  </div>
+</div>
+<div class="content pl-5 pr-5">
+  <ng-content></ng-content>
 </div>
