--- a/projects/auto-requests/src/styles.less
+++ b/projects/auto-requests/src/styles.less
@@ -3,6 +3,7 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 @import './app/styles/application';
 @import './app/styles/fonts';
+@import './app/styles/sign-in-dialog';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
