--- a/projects/auto-requests/src/app/app.component.html
+++ b/projects/auto-requests/src/app/app.component.html
@@ -12,7 +12,8 @@
       <div class="app-controls p-5">
         <button mat-raised-button
                 color="primary"
-                class="w-100 pt-2 pb-2">
+                class="w-100 pt-2 pb-2"
+                (click)="openAddRequestDialog()">
           Подать заявку
         </button>
       </div>
