AUTO: Add request time validator added

--- a/projects/auto-requests/src/styles.less
+++ b/projects/auto-requests/src/styles.less
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '~bootstrap/dist/css/bootstrap.css';
+@import '../../kolenergo-core/src/lib/ui/styles';
 @import './app/styles/application';
 @import './app/styles/fonts';
 @import './app/styles/sign-in-dialog';
