--- a/projects/auto-requests/src/app/components/add-request-dialog/add-request-dialog.component.html
+++ b/projects/auto-requests/src/app/components/add-request-dialog/add-request-dialog.component.html
@@ -39,7 +39,9 @@
         <mat-form-field appearance="fill" class="w-100 mt-3 pr-3" floatLabel="always">
           <mat-label>Дата поездки</mat-label>
           <!--<mat-icon class="clickable" matPrefix>today</mat-icon>-->
-          <input matInput formControlName="date">
+          <input matInput formControlName="date" [min]="(date$ | async)" [matDatepicker]="picker">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
           <!--<mat-icon class="done" matSuffix>done</mat-icon>-->
         </mat-form-field>
         <!-- End: Дата поездки -->
@@ -87,16 +89,7 @@
       <div class="col-6 route h-100 d-flex flex-column">
         <caption class="mb-3 pl-3">Маршрут</caption>
 
-        <!-- Start: Инициатор -->
-        <mat-form-field appearance="fill" class="w-100 pl-3">
-          <mat-label>Пункт назначения</mat-label>
-          <!--<mat-icon matPrefix>place</mat-icon>-->
-          <input matInput
-                 maxRows="1"
-                 placeholder="Введите пункт назначения"
-                 formControlName="initiator">
-        </mat-form-field>
-        <!-- End: Инициатор -->
+        <app-route-typeahead></app-route-typeahead>
 
       </div>
     </form>
