--- a/projects/auto-requests/src/app/components/add-request-dialog/add-request-dialog.component.less
+++ b/projects/auto-requests/src/app/components/add-request-dialog/add-request-dialog.component.less
@@ -122,7 +122,7 @@
           display: none;
           //content: '';
         }
-        text-align: center;
+        // text-align: center;
 
         &::-webkit-clear-button {
           display: none;
