--- a/projects/auto-requests/src/app/components/add-request-dialog/add-request-dialog.component.less
+++ b/projects/auto-requests/src/app/components/add-request-dialog/add-request-dialog.component.less
@@ -13,8 +13,8 @@
 @info-font-size: 13px;
 @info-color: #90a4ae;
 @comment-font-family: 'Open Sans Light';
-@comment-font-size: 14px;
-@comment-color: #546e7a;
+@comment-font-size: 13.5px;
+@comment-color: #757575;
 
 &:host {
   display: block;
