--- a/projects/auto-requests/src/app/components/route-typeahead/route-typeahead.component.html
+++ b/projects/auto-requests/src/app/components/route-typeahead/route-typeahead.component.html
@@ -1,12 +1,12 @@
 <div class="route-typeahead">
-  <mat-form-field appearance="fill" class="w-100" floatLabel="always">
-    <mat-label>Элемент маршрута</mat-label>
-    <input matInput [matAutocomplete]="auto">
-    <mat-autocomplete #auto="matAutocomplete">
-      <mat-option *ngFor="let option of [1, 2, 3, 4, 5]" [value]="option">
-        {{option}}
-      </mat-option>
-    </mat-autocomplete>
-    <mat-hint align="end">Поочередно укажите элементы маршрута</mat-hint>
-  </mat-form-field>
+  <form [formGroup]="routeForm">
+    <mat-form-field appearance="fill" class="w-100" floatLabel="always">
+      <mat-label>Элемент маршрута</mat-label>
+      <input #query matInput [matAutocomplete]="auto" formControlName="route" (keydown.enter)="enterRoute(query.value)">
+      <mat-autocomplete #auto="matAutocomplete" (optionSelected)="onSelect($event)" [displayWith]="display">
+        <mat-option *ngFor="let route of filteredRoutes" [value]="route">{{route.title}}</mat-option>
+      </mat-autocomplete>
+      <mat-hint align="start">Поочередно укажите элементы маршрута</mat-hint>
+    </mat-form-field>
+  </form>
 </div>
