--- a/projects/auto-requests/src/styles.less
+++ b/projects/auto-requests/src/styles.less
@@ -5,6 +5,7 @@
 @import './app/styles/application';
 @import './app/styles/fonts';
 @import './app/styles/sign-in-dialog';
+@import './app/styles/snack-bar';
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
