--- a/projects/auto-requests/src/app/features/requests/components/requests-list/requests-list.component.html
+++ b/projects/auto-requests/src/app/features/requests/components/requests-list/requests-list.component.html
@@ -1,6 +1,6 @@
 <div class="tabs"></div>
 <div class="content">
   <app-tabs>
-    <app-requests-grid style="margin-top: 25px" ></app-requests-grid>
+    <app-requests-grid class="mt-2" [requests]="requests$ | async"></app-requests-grid>
   </app-tabs>
 </div>
